--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   "dependencies": {
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-lottie": "^1.2.10"
+    "react-icons": "^5.4.0",
+    "react-lottie": "^1.2.10",
+    "uuid": "^11.0.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
