--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
     "react-lottie": "^1.2.10",
+    "react-router-dom": "^7.1.1",
     "uuid": "^11.0.4"
   },
   "devDependencies": {
