--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-icons": "^5.4.0",
     "react-lottie": "^1.2.10",
     "react-router-dom": "^7.1.1",
-    "uuid": "^11.0.4"
+    "uuid": "^11.0.4",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
