--- a/.github/workflows/codeQL.yml
+++ b/.github/workflows/codeQL.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Initialize CodeQL
         uses: github/codeql-action/init@v3
         with:
-          languages: 'javascript', 'typescript'
+          languages: 'typescript'
 
       # Step 3: Perform CodeQL analysis
       - name: Perform CodeQL Analysis
