--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-lottie": "^1.2.10",
     "react-router-dom": "^7.1.1",
     "uuid": "^11.0.4",
+    "winston": "^3.17.0",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
