--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "react-lottie": "^1.2.10",
     "react-markdown": "^9.0.3",
     "react-router-dom": "^7.1.1",
+    "react-syntax-highlighter": "^15.6.1",
+    "remark-gfm": "^4.0.1",
     "uuid": "^11.0.4",
     "winston": "^3.17.0",
     "zustand": "^5.0.3"
