bookmark issue of templates and bookmark func for structures remains

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,9 @@ VITE_FIREBASE_STORAGE_BUCKET=
 VITE_FIREBASE_MESSAGING_SENDER_ID=
 VITE_FIREBASE_APP_ID=
 VITE_FIREBASE_MEASUREMENT_ID=
+
+# aws credentials
+VITE_AWS_ACCESS_KEY_ID=
+VITE_AWS_SECRET_ACCESS_KEY=+kmdzrKaAJn
+VITE_AWS_REGION=
+VITE_AWS_BUCKET_NAME=
