--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "react-icons": "^5.4.0",
     "react-lottie": "^1.2.10",
     "react-markdown": "^9.0.3",
+    "react-modal": "^3.16.3",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^7.1.1",
     "react-syntax-highlighter": "^15.6.1",
     "remark-gfm": "^4.0.1",
@@ -34,8 +36,10 @@
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "@types/react-lottie": "^1.2.10",
+    "@types/react-modal": "^3.16.3",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "autoprefixer": "^10.4.20",
+    "esbuild": ">=0.25.0",
     "eslint": "^9.17.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
@@ -48,7 +52,6 @@
     "tailwindcss": "^3.4.17",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.18.2",
-    "vite": ">=6.0.9",
-    "esbuild": ">=0.25.0"
+    "vite": ">=6.0.9"
   }
 }
