--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "remark-gfm": "^4.0.1",
     "uuid": "^11.0.4",
     "winston": "^3.17.0",
-    "zustand": "^5.0.3"
+    "zustand": "^5.0.3",
+    "esbuild": ">=0.25.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
