--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.744.0",
     "@firebasegen/default-connector": "file:dataconnect-generated/js/default-connector",
+    "esbuild": ">=0.25.0",
     "firebase": "^11.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -26,10 +27,10 @@
     "react-router-dom": "^7.1.1",
     "react-syntax-highlighter": "^15.6.1",
     "remark-gfm": "^4.0.1",
+    "tsc": "^2.0.4",
     "uuid": "^11.0.4",
     "winston": "^3.17.0",
-    "zustand": "^5.0.3",
-    "esbuild": ">=0.25.0"
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
