--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "tsc": "^2.0.4",
     "uuid": "^11.0.4",
     "winston": "^3.17.0",
-    "zustand": "^5.0.3"
+    "zustand": "^5.0.3",
+    "typescript": "~5.6.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
