--- a/package.json
+++ b/package.json
@@ -27,11 +27,10 @@
     "react-router-dom": "^7.1.1",
     "react-syntax-highlighter": "^15.6.1",
     "remark-gfm": "^4.0.1",
-    "tsc": "^2.0.4",
+    "typescript": "~5.6.2",
     "uuid": "^11.0.4",
     "winston": "^3.17.0",
-    "zustand": "^5.0.3",
-    "typescript": "~5.6.2"
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
