--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.744.0",
+    "chart.js": "^4.4.8",
     "esbuild": ">=0.25.0",
     "firebase": "^11.1.0",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
@@ -26,6 +28,7 @@
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^7.1.1",
     "react-syntax-highlighter": "^15.6.1",
+    "recharts": "^2.15.1",
     "remark-gfm": "^4.0.1",
     "typescript": "~5.6.2",
     "uuid": "^11.0.4",
