removed --ext in lint

--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "build": "vite build --mode production",
     "start": "vite preview --host",
     "preview": "vite preview",
-    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
-    "lint:fix": "eslint . --ext .js,.jsx,.ts,.tsx --fix",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
     "format": "prettier --write ."
   },
   "dependencies": {
