--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "format": "prettier --write .",
-    "test": "vitest"
+    "test": "vitest tests/utils"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.744.0",
